--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "firebase": "^9.17.1",
+    "firebase-tools": "^11.25.1",
     "rxjs": "~7.5.0",
     "swiper": "^6",
     "tslib": "^2.3.0",
